--- a/winelux/style/style.css
+++ b/winelux/style/style.css
@@ -161,7 +161,7 @@ h6 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-image: none;
+    background-image: var(--bg-image2);
     background-size: 222vh;
     background-repeat: no-repeat;
 }
@@ -519,6 +519,7 @@ footer p {
     #header3 {
         flex-direction: column;
         padding: 20px 15px;
+        background-image: none;
     }
 
     #right-content {
