--- a/styles.css
+++ b/styles.css
@@ -412,7 +412,7 @@ header {
 
 .band1 {
     overflow: hidden;
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+    background: radial-gradient(circle at 30% 107%, #ffd37b 0%, #d5481d 35%,#812999 55%,#064CCE 75%, #28cad8 100%);
     transform: rotate(-3deg);
     top: 0;
 }
