--- a/rayon/styles.css
+++ b/rayon/styles.css
@@ -522,4 +522,12 @@ footer p {
     footer {
         padding: 20px 0;
     }
+
+    .feature-item:hover{
+        transform: translateY(0);
+    }
+
+    .stat-item:hover {
+        transform: translateY(0);
+    }
 }
