--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,7 @@ strong {
 }
 
 .gallery-item:hover .project-logo {
-    transform: translate(-50%, -95%) scale(0.8); 
+    transform: translate(-50%, -95%) scale(0.8)
 }
 
 .gallery-item .overlay {
@@ -241,6 +241,7 @@ strong {
     left: 0;
     width: 100%;
     height: 100%;
+    backdrop-filter: blur(2.5px);
     background:#08080870;
     color: #e0e0e0;
     display: flex;
