--- a/J3DTranslator/styles.css
+++ b/J3DTranslator/styles.css
@@ -421,7 +421,7 @@ footer {
 
 /* styles.css */
 .raw-error-message {
-
+    color: black;
     background-color: rgba(255, 255, 255, 0.5);
     padding: 0.8rem;
     border-radius: 6px;
