--- a/MyRoots/styles.css
+++ b/MyRoots/styles.css
@@ -281,6 +281,11 @@ body {
   filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.1)); 
 }
 
+.deceased {
+  background-image: url('Images/headstone.png');
+  background-size: cover;
+}
+
 .info-icon:hover {
   color: #4a90e2;
   transform: scale(1.1) translateY(25%);
