--- a/MyRoots/styles.css
+++ b/MyRoots/styles.css
@@ -176,7 +176,7 @@ body {
     z-index: 2000;
 }
 
-.country-popup {
+.country-popup, .region-popup {
     position: relative;
     background: white;
     width: 80%;
@@ -208,7 +208,7 @@ body {
     background: linear-gradient(to bottom, transparent 0%, white 100%);
 }
 
-.country-popup-flag {
+.country-popup-flag, .region-popup-flag {
     width: 100px;
     position: absolute;
     top: 150px;
@@ -219,14 +219,14 @@ body {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
-.country-name {
+.country-name, .region-name {
     margin-top: 70px;
     font-size: 2.5em;
     font-weight: bold;
     color: #333;
 }
 
-.country-native-name {
+.country-native-name, .region-native-name {
     font-size: 1.2em;
     color: #666;
     margin: -10px 0 20px;
@@ -295,4 +295,10 @@ body {
 .info-icon:active {
   transform: scale(0.9) translateY(25%); 
   transition: transform 0.1s ease;
+}
+
+.region-map-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
