--- a/styles.css
+++ b/styles.css
@@ -185,11 +185,6 @@ strong {
     color: gray;
 }
 
-.gallery-item.personal-project,
-.gallery-item.commission {
-    display: none; 
-}
-
 .gallery {
     display: flex;
     flex-wrap: wrap;
@@ -219,8 +214,11 @@ strong {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    min-width: 100vh; 
-    transition: transform 0.75s ease;
+    min-width: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.75s ease;
     z-index: 2;
 }
 
@@ -228,10 +226,16 @@ strong {
     display: block;
     max-height: 20vh;
     min-height: 20vh;
+    max-width: 50vh;
+    width: auto;
+    height: auto;
+    object-fit: contain;
+    transition: all 0.5s ease;
+    filter: drop-shadow(0 0 1vh rgba(0, 0, 0, 0.5));
 }
 
 .gallery-item:hover .project-logo {
-    transform: translate(-50%, -95%) scale(0.8)
+    transform: translate(-50%, -85%) scale(0.6);
 }
 
 .gallery-item .overlay {
@@ -244,16 +248,27 @@ strong {
     background:#08080870;
     color: #e0e0e0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     opacity: 0;
-    transition: opacity 0.3s ease;
+    transition: all 0.4s ease;
     font-family: 'Thin', sans-serif;
     font-size: 2.5vh;
+    padding-bottom: 5vh; 
 }
 
 .gallery-item:hover .overlay {
     opacity: 1;
+}
+
+.gallery-item .overlay strong {
+    font-family: 'Bold', sans-serif;
+    margin-left: 0.5vh;
+}
+
+.gallery-item .overlay-text {
+    margin-top: 8vh;
 }
 
 name {
